[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=46.4.0", "wheel", "setuptools_scm[toml]>=6.2"]

[tool.setuptools_scm]
write_to = "src/neurosis/_version.py"

[tool.black]
line-length = 110
target-version = ['py310']
ignore = [
  'F841', # unused variable
  'E501', # line too long
]

[tool.ruff]
line-length = 110
target-version = 'py310'
ignore = [
  'F841', # unused variable
  'E501', # line too long
]
extend-exclude = ["/usr/lib/*"]

[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true
known-local-folder = ["src"]
known-first-party = ["neurosis"]

[tool.pyright]
include = ['src/**']
exclude = ['/usr/lib/**']
