[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]

[tool.setuptools_scm]
write_to = "src/neurosis/_version.py"

[tool.black]
line-length = 110
target-version = ['py310']
ignore = [
  'F841', # local variable assigned but never used
  'E501', # line too long (black fixes this so why does it complain?)
]

[tool.ruff]
line-length = 110
target-version = 'py310'
ignore = [
  'F841', # local variable assigned but never used
  'F842', # local variable annotated but never used
  'E501', # line too long (black handles this)
]
extend-exclude = ["/usr/lib/*"]

[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true
known-local-folder = ["src"]
known-first-party = [
  "neurosis",
]

[tool.pyright]
include = ['src/**']
exclude = ['/usr/lib/**']
stubPath = './typings'
