[metadata]
name = neurosis
author = Andi Powers-Holmes
email = aholmes@omnom.net
maintainer = Andi Powers-Holmes
maintainer_email = aholmes@omnom.net
license_files = LICENSE.md

[options]
python_requires = >=3.10
packages = find_namespace:
package_dir =
    =src
py_modules =
    neurosis
include_package_data = True
install_requires =
    accelerate >= 0.20.3
    bitsandbytes >= 0.41.1
    chardet == 5.1.0
    clip @ git+https://github.com/openai/CLIP.git@a1d071733d7111c9c014f024669f959182114e33#egg=clip
    colorama >= 0.4.3, < 0.5.0
    crc32c >= 2.3
    datasets >= 2.13.0
    diffusers >= 0.18.1
    einops >= 0.6.1
    jsonargparse[argcomplete,fsspec,omegaconf,signatures] >= 4.27.0, < 5.0.0
    kornia >= 0.7.0
    lightning[extra] >= 2.0.0, < 2.2.0
    natsort >= 8.4.0
    ninja >= 1.11.0
    numpy >= 1.24.3
    open-clip-torch >= 2.2.0
    opencv-contrib-python-headless >= 4.6.0.66, < 4.7.0
    pandas >= 2.0.0
    pillow >= 10.0.0, < 11.0.0
    pudb >= 2022.1.3
    pydantic >= 1.10.8, < 2.0.0
    pynvml >= 11.0.0, < 12.0.0
    ray[data] >= 2.7.0, < 3.0.0
    rich >= 13.0.0, < 14.0.0
    safetensors >= 0.3.1
    sentencepiece >= 0.1.99
    shellingham >= 1.5.0, < 2.0.0
    tensorboardx == 2.6
    tokenizers >= 0.13.3
    torch >= 2.0.0, < 2.2.0
    torchvision
    tqdm >= 4.65.0
    transformers >= 4.30.2
    typer >= 0.9.0, < 1.0.0
    wandb >= 0.16.0 < 0.17.0

[options.extras_require]
dev =
    black >= 22.3.0
    ruff >= 0.0.234
    setuptools-scm >= 7.0.0
xformers =
    xformers >= 0.0.22
tagger =
    onnxruntime-gpu >= 1.14.1
mongo =
    pyarrow >= 13.0.0, < 14.0.0
    pymongoarrow >= 1.1.0, < 1.2.0


[options.packages.find]
where = src

[options.package_data]
* =
    *.css
    *.json
    *.js
    *.md
    *.txt
neurosis.data =
    *.ckpt
    *.pt
    *.pth
    *.safetensors

[options.entry_points]
console_scripts =
    neurosis = neurosis.cli:app
